# QR-Code-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
qrgen/: __init__.py  cli.py  generator.py
